--- a/src/routes/hotelList/hotelList.scss
+++ b/src/routes/hotelList/hotelList.scss
@@ -14,7 +14,7 @@
       display: flex;
       flex-direction: column;
       gap: 50px;
-      overflow-y: scroll;
+      overflow-y: auto;
       padding-bottom: 50px;
     }
   }
